edit default scrollbar

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import "./variables/fonts";
 @import "./variables/constants";
 @import "./helpers/mixins";
+@import "./base/scrollbar";
 @import "./base/typography";
 
 //components
