+header min height 100vh

--- a/src/scss/pages/_header.scss
+++ b/src/scss/pages/_header.scss
@@ -5,6 +5,10 @@ h1 {
     line-height: 35px;
 }
 header {
+    min-height: 100vh;
+    @include flex(center) {
+        flex-direction: column;
+    }
     &.active {
         .hidden {
             display: block;
