+add logo(go main), edit navigation

--- a/src/scss/components/_topnav.scss
+++ b/src/scss/components/_topnav.scss
@@ -38,6 +38,7 @@
     }
     .logo {
         @include flex(center);
+        cursor: pointer;
         .img {
             @include flex(center);
             @include size($h-logo);
