--- a/src/scss/pages/_aboutUs.scss
+++ b/src/scss/pages/_aboutUs.scss
@@ -9,8 +9,9 @@
         inset: 0;
         @include size(100%);
         background: var(--clr--cyan);
+        background: var(--clr--bg-alt);
         z-index: -1;
-        opacity: 0.66;
+        opacity: 0.8;
     }
 }
 .profile {
