--- a/src/scss/pages/_statistics.scss
+++ b/src/scss/pages/_statistics.scss
@@ -1,6 +1,11 @@
 .statistics {
-    background: var(--clr--primary);
-    color: var(--clr--white);
+    //old
+    // background: var(--clr--primary);
+    // color: var(--clr--white);
+    //new
+    background: var(--clr--bg-alt);
+    color: var(--clr--title);
+    //new 2
     ul {
         margin: -7px;
         @include flex(space-around, null) {
@@ -33,6 +38,8 @@
         color: var(--clr--primary);
         border-radius: $radius;
         font-size: $fs1;
+        // box-shadow: 2px 2px 2px rgb(0 0 0 / 25%);
+        box-shadow: 2px 2px 8px -4px rgb(0 0 0 / 25%);
         div {
             @include flex(center, center, column);
             line-height: 32px;
