--- a/src/scss/pages/_aboutUs.scss
+++ b/src/scss/pages/_aboutUs.scss
@@ -11,7 +11,8 @@
         background: var(--clr--cyan);
         background: var(--clr--bg-alt);
         z-index: -1;
-        opacity: 0.8;
+        opacity: 0.66;
+        // opacity: 0.8;
     }
 }
 .profile {
