--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -22,9 +22,9 @@ $colors: (
                 #0a1836,
             ),
             bg: (
-                // #f2f2f2,
+                // #f9f9f9,
                 #fff,
-                // #212121,
+                // #171f29,
                 #171f29,
             ),
             bg-alt: (
