--- a/src/scss/pages/_features.scss
+++ b/src/scss/pages/_features.scss
@@ -22,18 +22,35 @@
         background: var(--clr--white);
         cursor: pointer;
         box-shadow: 2px 2px 2px #00000040;
-        //a smart way to generate colors for each card
-        //no need to indexes
-        &:hover img {
-            animation: moveTop 2 * $trans linear infinite alternate;
+        z-index: 1;
+        @include before-after {
+            @extend %center;
+            @include size(0);
+            border-radius: inherit;
+            opacity: 0;
+            transition: $trans*.5 ease-in;
+        }
+        &::before{
+            // background: #f5f5f5;
+            background: inherit;
+            filter: brightness(93%);
+            z-index: -3;
+        }
+        &:hover {
+            &::before {
+                opacity: 1;
+                @include size(calc(100% - 11px));
+            }
         }
         p {
-            display: none;
+            opacity: 0;
             margin-top: 25px;
             color: var(--clr--white);
             text-align: center;
             font-size: $fs6;
             line-height: 16.4px;
+            text-shadow: 1px 1px #00000040;
+            transition: opacity $trans*.5 $trans*.7;
         }
         img {
             @extend %center-x;
@@ -41,6 +58,8 @@
             min-height: 173px;
             width: calc(100% - 58px);
         }
+        //a smart way to generate colors for each card
+        //no need to indexes
         @each $group, $content in $colors {
             @if ($group == crd) {
                 $i: 1;
@@ -49,7 +68,7 @@
                         &:nth-of-type(#{$i}) h3 {
                             color: var(--clr-#{$group}-#{"" + $color});
                         }
-                        &:nth-of-type(#{$i}).active {
+                        &:nth-of-type(#{$i}).active::after {
                             background: var(--clr-#{$group}-#{"" + $color});
                         }
                         $i: $i + 1;
@@ -65,11 +84,20 @@
                 color: var(--clr--white);
             }
             p {
-                display: block;
+                // display: block;
+                opacity: 1;
             }
             img {
                 opacity: 0.2;
-                animation: none;
+            }
+            &::before{
+                transition: 0;
+                @include size(0 !important)
+            }
+            &::after{
+                opacity: 1;
+                @include size(calc(100% - 5px));
+                z-index: -1;
             }
         }
     }
