colors update : grey, bg

--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -5,7 +5,7 @@ $colors: (
             cyan30: #407bff30,
             grey: (
                 #dedede,
-                #cecece,
+                #d3d3d3,
             ),
             topnav: (
                 // rgba(255, 255, 255, 0.8),
@@ -22,9 +22,8 @@ $colors: (
                 #0a1836,
             ),
             bg: (
-                // #f9f9f9,
-                #fff,
-                // #171f29,
+                #fcfcfc,
+                // #fff,
                 #171f29,
             ),
             bg-alt: (
