--- a/src/scss/pages/_aboutUs.scss
+++ b/src/scss/pages/_aboutUs.scss
@@ -36,9 +36,20 @@
     }
     .img {
         background: var(--clr--primary);
+        overflow: hidden;
         opacity: 0.9;
+        @include after {
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,15%);
+            @include size(45px);
+            border-radius: 50%;
+            background: rgba(255, 255, 255, 15%);
+            z-index: -1;
+        }
         img {
             display: block;
+            transition: $trans;
             margin-inline: auto;
             width: 85.7%;
             z-index: 4;
@@ -69,6 +80,7 @@
                 @include size(48px);
                 &,
                 a {
+                    transition: $trans;
                     transform: translateY(50%);
                 }
                 &:hover,
@@ -176,6 +188,19 @@
     @include mq($lg) {
         .desc {
             width: 71.8% !important;
+        }
+    }
+}
+//on hover
+.aboutUs .profile{
+    &:hover {
+        img {
+            transform: scale(1.1) translateY(10%);
+        }
+    }
+    &:not(.active):hover{
+        .img::after {
+            animation: flashing $trans*2.5 0.05s;
         }
     }
 }
