--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -54,6 +54,9 @@ $colors: (
         purple: #7e57c2,
         yellow: #ffc100,
     ),
+    crd-hover: (
+        green: #019f0f
+    ),
     sm: (
         facebook: #3b5998,
         instagram: #e95950,
