add pricing plans

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,6 +21,7 @@
 @import "./pages/aboutUs";
 @import "./pages/contactUs";
 @import "./pages/statistics";
+@import "./pages/pricing";
 @import "./pages/footer";
 
 @import "./helpers/animation";
