+ utilitie : main_title class

--- a/src/scss/helpers/_utilities.scss
+++ b/src/scss/helpers/_utilities.scss
@@ -17,6 +17,10 @@
     }
     margin-inline: auto;
 }
+h2.main-title{
+    color: var(--clr--title);
+    margin: 0 auto 50px;
+}
 a {
     text-decoration: none;
 }
