--- a/src/scss/pages/_faqs.scss
+++ b/src/scss/pages/_faqs.scss
@@ -1,15 +1,13 @@
 .faqs {
     h2 {
         background: var(--clr--cyan);
-        color: var(--clr--white);
+        color: var(--clr--white) !important;
         padding: 4.6px;
         border-radius: $radius;
         width: 137px;
-        margin-inline: auto;
     }
     .column {
         color: var(--clr-f-2);
-        margin-top: 39px;
     }
     p {
         color: var(--clr-f-1);
