--- a/src/scss/pages/_features.scss
+++ b/src/scss/pages/_features.scss
@@ -49,7 +49,8 @@
             line-height: 16.4px;
             text-shadow: 1px 1px #00000040;
             text-shadow: 0.5px 0.5px 2px rgb(0 0 0 / 60%);
-            transition: opacity $trans*.5 $trans*.7;
+            transition: opacity $trans*.5;
+
         }
         img {
             @extend %center-x;
@@ -84,6 +85,8 @@
             }
             p {
                 opacity: 1;
+                transition: opacity $trans*.5 $trans*.7;
+
             }
             img {
                 opacity: 0.2;
