main-title width

--- a/src/scss/helpers/_utilities.scss
+++ b/src/scss/helpers/_utilities.scss
@@ -20,6 +20,7 @@
 h2.main-title{
     color: var(--clr--title);
     margin: 0 auto 50px;
+    width: fit-content;
 }
 a {
     text-decoration: none;
