--- a/src/scss/pages/_faqs.scss
+++ b/src/scss/pages/_faqs.scss
@@ -4,7 +4,7 @@
         color: var(--clr--white) !important;
         padding: 4.6px;
         border-radius: $radius;
-        width: 137px;
+        width: 137px !important;
     }
     .column {
         color: var(--clr-f-2);
