add reviews page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,6 +22,7 @@
 @import "./pages/contactUs";
 @import "./pages/statistics";
 @import "./pages/pricing";
+@import "./pages/reviews";
 @import "./pages/footer";
 
 @import "./helpers/animation";
