+ scroll animation 2 new ele, repair observerTest, center title

--- a/src/scss/helpers/_utilities.scss
+++ b/src/scss/helpers/_utilities.scss
@@ -19,6 +19,7 @@
 }
 .main-title{
     margin: 0 auto 50px;
+    text-align: center;
     h2{
         color: var(--clr--title);
         padding: 10px 30px;
