--- a/src/scss/pages/_reviews.scss
+++ b/src/scss/pages/_reviews.scss
@@ -1,19 +1,23 @@
 .reviews {
     background: var(--clr--bg-alt);
     .container {
-        padding: 3rem 0 120px;
+        padding: 3rem 3rem 120px;
         @include mq($md){
             padding-bottom: 3rem !important;
             display: flex;
             overflow-x: scroll;
         }
-        @include mq($lg){
-            overflow-x: unset;
+        &::-webkit-scrollbar {
+            display: none;
+        }
+        cursor: grab;
+        &:active{
+            cursor: grabbing;
         }
     }
     .card {
-        $nCard : 3;
-        transition: $fast-trans;
+        user-select: none;
+        transition: transform $fast-trans ease, margin-top $fast-trans ease;
         box-shadow: -1rem 0 3rem rgb(0 0 0 / 20%);
         &:not(:first-of-type){
             margin-top: -120px;
@@ -39,8 +43,7 @@
         }
         padding: 40px 20px 20px;
         background-color: var(--clr--white);
-        // box-shadow: 0 2px 4px rgb(0 0 0 / 7%);
-        border-radius: 6px;
+        border-radius: $radius;
         position: relative;
         img {
             position: absolute;
@@ -64,7 +67,6 @@
             line-height: 1.5;
             color: #777;
             margin-top: 35px;
-            // margin-bottom: 0;
         }
     }
 }
