change review page bg clr

--- a/src/scss/pages/_reviews.scss
+++ b/src/scss/pages/_reviews.scss
@@ -1,5 +1,5 @@
 .reviews {
-    background: var(--clr--bg-alt);
+    background: var(--clr--bg);
     .container {
         padding: 3rem 3rem 120px;
         @include mq($md){
