add general IE11 class, change footer clr

--- a/src/scss/helpers/_utilities.scss
+++ b/src/scss/helpers/_utilities.scss
@@ -1,6 +1,11 @@
 @use "sass:math";
 .parent {
     padding: 68px 0;
+    &.ie .container {
+        @include flex(space-around, center) {
+            flex-wrap: wrap;
+        }
+    }
 }
 .container {
     width: 95%;
